part2/frontend/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: react-fe
  namespace: react-fe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: react-fe
  template:
    metadata:
      labels:
        app: react-fe
    spec:
      containers:
        - name: react-fe
          image: thaddavis/react-docker:v23
          ports:
            - containerPort: 80
