part2/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: react-fe
  name: react-fe-service
spec:
  type: NodePort
  selector:
    app: react-fe
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
