part2/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: react-fe
  annotations:
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:333427308013:certificate/3d83e5c0-722c-4ec1-b1c4-5f8380f58135
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
  labels:
    app: ssl-entrance
    app.kubernetes.io/name: ssl-entrance
  name: ssl-entrance-ingress
spec:
  ingressClassName: alb # or whatever ingress class name of ELB
  rules:
    - host: wishbliss.link # change it to your host name here
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: ssl-redirect
                port:
                  name: use-annotation
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: react-fe-service
                port:
                  number: 80
  tls:
    - hosts:
        - wishbliss.link # change it to your host name here
